# footpred2

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
configs/: findings_registry.json
configs/mapping_profiles/: example_custom_profile.json
docs/: RESEARCH_RETROSPECTIVE.md  VISION.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_odds_line_price_point.py
scripts/: init_db.py  run_tests.py
src/footpred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/footpred/domain/: entities.py  ports.py
src/footpred/infra/: memory.py  read_models.py
src/footpred/infra/db/: models.py  session.py  uow.py
src/footpred/ingest/: mapping.py  pipeline.py  readers.py  resolution.py  validation.py
src/footpred/ml/: baselines.py  datasets.py  evidence.py  odds_math.py  predictions_log.py  splits.py  targets.py
src/footpred/ml/backtest/: metrics.py  runner.py  simulator.py
src/footpred/ml/features/: __init__.py  base.py  odds_features.py  team_form.py
src/footpred/ml/models/: __init__.py  canonical.py  coherence.py  dixon_coles.py  draw_residual.py  tabular.py
src/footpred/services/: evaluation_service.py  import_service.py
src/footpred/ui/streamlit_app/: app.py
tests/: test_canonical.py  test_coherence.py  test_dixon_coles.py  test_draw_residual.py  test_evidence.py  test_mapping.py  test_ml_sprint2.py  test_odds_math.py  test_odds_repository.py  test_pipeline.py  test_predictions_log.py  test_resolution.py  test_tabular.py  test_targets_splits.py  test_team_form.py  test_validation.py
(+1 files in other folders)
