[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "footpred"
version = "0.2.0"
description = "Local-first football prediction platform"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "SQLAlchemy>=2.0",
    "alembic>=1.12",
    "streamlit>=1.30",
    "numpy>=1.26",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
